[develop] Fix a bug that process not showing in dashboard :bear:

--- a/src/assets/scss/ide/dashboard.scss
+++ b/src/assets/scss/ide/dashboard.scss
@@ -740,7 +740,7 @@
     left     : 0;
     bottom   : 0;
     height   : 27px;
-    z-index  : -1;
+    z-index  : 2;
     border-radius : 0 0 0 5px;
 
     $stripeColor1 : #ad77d7;
@@ -757,6 +757,11 @@
     -webkit-animation: progress-bar 2s linear infinite;
        -moz-animation: progress-bar 2s linear infinite;
             animation: progress-bar 2s linear infinite;
+
+    + .region-resource-info {
+      position : relative;
+      z-index  : 1;
+    }
   }
 
   .region-resource-info {
